# openclaw-bench

./: .gitignore  README.md  README_ZN.md  pyproject.toml
control/: openclaw.json  openclaw_128_upm.json  openclaw_32_upm.json  openclaw_64_upm.json  openclaw_c128.json  openclaw_c256.json  openclaw_c32.json  openclaw_c64.json  tiny.json
examples/: control.example.json
scripts/: gen_config.sh  report.py  simulate.sh
src/openclaw_bench/: __init__.py  __main__.py  cli.py  config_generator.py  dashboard.py  metrics.py  models.py  scenario.py  simulator.py  tokenizer.py
src/openclaw_bench/templates/: dashboard.html
tests/: test_cli.py  test_dashboard_loader.py  test_generator.py  test_metrics.py  test_simulator.py  test_tokenizer.py
