[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-bench"
version = "0.1.0"
description = "Deterministic multi-user benchmark harness for OpenAI-compatible chat completions services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "jinja2>=3.1",
  "matplotlib>=3.8",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "tokenizers>=0.19",
  "tqdm>=4.66",
  "tiktoken>=0.7",
  "transformers>=4.41",
  "uvicorn>=0.29",
]

[project.scripts]
openclaw-bench = "openclaw_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
